syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message CheckEmailRequest {
  string email = 1;
}

message CheckEmailResponse {
  int32 code = 1;
  string message = 2;
}