syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "entities/simple_data.proto";

message ResetPasswordRequest {
  string password = 1;
  string code_verify = 2;
  int32 id_verify = 3;
}

message ResetPasswordResponse {
  int32 code = 1;
  string message = 2;
}